--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -37,4 +37,11 @@ body {
     font-size: 65px;
     line-height: 79px;
     color: #FFF;
+    cursor: pointer;
+    transition: all .4s ease;
+}
+
+.cell-empty {
+    background: transparent;
+    cursor: auto;
 }
