--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,6 +2,7 @@
 
 $black: #191819;
 $pink: #C8A2D6;
+$white: #CFDDDB;
 
 * {
     font-family: Montserrat;
@@ -10,6 +11,16 @@ $pink: #C8A2D6;
 body {
     height: 100vh;
     background-color: $black;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.puzzle-game {
+    width: 100%;
 }
 
 .board {
@@ -44,4 +55,21 @@ body {
 .cell-empty {
     background: transparent;
     cursor: auto;
+}
+
+.button {
+    margin-top: 30px;
+    padding: 21px 60px 20px 60px;
+    font-size: 24px;
+    line-height: 29px;
+    color: #191819;
+    background: $white;
+    border-radius: 20px;
+    transition: all ease .4s;
+
+    &:hover {
+        color: $white;
+        outline: solid 1px $white;
+        background: transparent;
+    }
 }
