feat: add moves

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,6 +73,8 @@ body {
 }
 
 .top-buttons {
+  display: flex;
+  gap: 10px;
   width: 100%;
   margin-bottom: 10px;
   font-size: 18px;
@@ -80,7 +82,7 @@ body {
   color: #FFF;
 }
 
-.timer {
+.about-game {
   display: flex;
   width: 100%;
   max-width: 149px;
@@ -89,6 +91,6 @@ body {
   border-radius: 15px;
 }
 
-.timer-timer {
+.about-game__text {
   margin-left: 10px;
 }/*# sourceMappingURL=styles.css.map */
