--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@ body {
 .wrapper {
   opacity: 0;
   visibility: 0;
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
@@ -32,6 +32,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
+  padding-bottom: 150px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -54,7 +55,7 @@ body {
   max-width: 393px;
   padding: 20px;
   position: absolute;
-  top: 50px;
+  top: 144px;
   right: 0;
   background-color: #fff;
   border-radius: 20px;
@@ -201,4 +202,52 @@ body {
 
 .about-game__text {
   margin-left: 10px;
+}
+
+.puzzle-game__heading {
+  display: block;
+  flex-shrink: 0;
+  width: 100%;
+  height: 62px;
+  margin-bottom: 30px;
+}
+
+.win-title {
+  width: 100%;
+  font-size: 24px;
+  line-height: 130.9%;
+  color: #FFFFFF;
+}
+
+.leaderboards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.leaderboard-button {
+  margin-top: 10px;
+  font-size: 18px;
+  line-height: 22px;
+  color: #FFFFFF;
+  background-color: transparent;
+}
+.leaderboard-button::after {
+  content: url(../assets/img/arrow.svg);
+  margin-left: 10px;
+}
+
+.leaderboards-list {
+  width: 100%;
+}
+.leaderboards-list li {
+  display: flex;
+  justify-content: space-between;
+  color: #FFF;
+}
+
+.leaderboards-score {
+  display: flex;
+  gap: 10px;
 }/*# sourceMappingURL=styles.css.map */
