--- a/styles/styles.css
+++ b/styles/styles.css
@@ -227,6 +227,7 @@ body {
 }
 
 .leaderboard-button {
+  display: flex;
   margin-top: 10px;
   font-size: 18px;
   line-height: 22px;
@@ -236,15 +237,30 @@ body {
 .leaderboard-button::after {
   content: url(../assets/img/arrow.svg);
   margin-left: 10px;
+  transform: rotate(0);
+  display: block;
+  transition: transform ease 0.4s;
+}
+
+.leaderboard-button_active::after {
+  transform: rotate(-180deg);
 }
 
 .leaderboards-list {
   width: 100%;
+  opacity: 0;
+  visibility: hidden;
+  transition: all ease 0.4s;
 }
 .leaderboards-list li {
   display: flex;
   justify-content: space-between;
   color: #FFF;
+}
+
+.leaderboards-list_active {
+  visibility: visible;
+  opacity: 1;
 }
 
 .leaderboards-score {
