--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,11 +28,11 @@ body {
 }
 
 .container {
-  max-width: 29.3vw;
+  max-width: 545px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
-  padding-bottom: 7.81vw;
+  padding-bottom: 150px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,7 +42,7 @@ body {
 .puzzle-game__top {
   display: flex;
   width: 100%;
-  margin-bottom: 0.52vw;
+  margin-bottom: 10px;
 }
 
 .puzzle-game {
@@ -52,13 +52,13 @@ body {
 
 .game-settings {
   width: 100%;
-  max-width: 20.57vw;
-  padding: 1.04vw;
+  max-width: 393px;
+  padding: 20px;
   position: absolute;
-  top: 7.5vw;
+  top: 144px;
   right: 0;
   background-color: #fff;
-  border-radius: 1.04vw;
+  border-radius: 20px;
   opacity: 0;
   visibility: hidden;
   transition: all ease 0.4s;
@@ -71,18 +71,18 @@ body {
 }
 
 .settings-heading {
-  font-size: 1.04vw;
-  line-height: 1.25vw;
+  font-size: 20px;
+  line-height: 24px;
 }
 
 .settings-list {
   display: flex;
-  margin-top: 0.31vw;
-  gap: 0.73vw;
+  margin-top: 6px;
+  gap: 14px;
 }
 .settings-list button {
-  font-size: 0.94vw;
-  line-height: 1.15vw;
+  font-size: 18px;
+  line-height: 22px;
   cursor: pointer;
   background-color: transparent;
 }
@@ -96,45 +96,45 @@ body {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding: 1.09vw 1.15vw 1.15vw 1.09vw;
+  padding: 21px 22px 22px 21px;
   background-color: black;
   position: relative;
-  border-radius: 1.04vw;
+  border-radius: 20px;
 }
 
 .board-very-small {
-  max-width: 21.72vw;
-  height: 21.72vw;
+  max-width: 417px;
+  height: 417px;
 }
 
 .board-small {
-  max-width: 28.39vw;
-  height: 28.39vw;
+  max-width: 545px;
+  height: 545px;
 }
 
 .board-medium {
-  max-width: 35.05vw;
-  height: 35.05vw;
+  max-width: 673px;
+  height: 673px;
 }
 
 .board-standart {
-  max-width: 41.72vw;
-  height: 41.72vw;
+  max-width: 801px;
+  height: 801px;
 }
 
 .board-large {
-  max-width: 48.39vw;
-  height: 48.39vw;
+  max-width: 929px;
+  height: 929px;
 }
 
 .board-very-large {
-  max-width: 55.05vw;
-  height: 55.05vw;
+  max-width: 1057px;
+  height: 1057px;
 }
 
 .cell {
-  width: 6.15vw;
-  height: 6.15vw;
+  width: 118px;
+  height: 118px;
   background-color: #C8A2D6;
   display: inline-block;
   border-radius: 0.78vw;
@@ -142,8 +142,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 3.39vw;
-  line-height: 4.11vw;
+  font-size: 65px;
+  line-height: 79px;
   color: #FFF;
   cursor: pointer;
   transition: all 0.4s ease;
@@ -156,8 +156,8 @@ body {
 
 .settings-button {
   display: block;
-  width: 2.19vw;
-  height: 2.19vw;
+  width: 42px;
+  height: 42px;
   background-image: url(../assets/img/settings.svg);
   background-size: contain;
   background-repeat: no-repeat;
@@ -167,8 +167,8 @@ body {
 
 .volume-button {
   display: block;
-  width: 2.03vw;
-  height: 1.98vw;
+  width: 39px;
+  height: 38px;
   background-image: url(../assets/img/sound.svg);
   background-size: contain;
   background-repeat: no-repeat;
@@ -180,7 +180,7 @@ body {
   content: "";
   position: absolute;
   width: 100%;
-  height: 0.21vw;
+  height: 4px;
   background-color: #FFF;
   left: 0;
   transform: rotate(50deg);
@@ -201,18 +201,18 @@ body {
 .top-buttons-menu {
   display: flex;
   align-items: center;
-  gap: 0.52vw;
+  gap: 10px;
   z-index: 23;
 }
 
 .button {
-  margin-top: 1.56vw;
-  padding: 1.09vw 3.13vw 1.04vw 3.13vw;
-  font-size: 1.25vw;
-  line-height: 1.51vw;
+  margin-top: 30px;
+  padding: 21px 60px 20px 60px;
+  font-size: 24px;
+  line-height: 29px;
   color: #191819;
   background: #FFF;
-  border-radius: 1.04vw;
+  border-radius: 20px;
   transition: all ease 0.4s;
 }
 .button:hover {
@@ -223,37 +223,37 @@ body {
 
 .top-buttons {
   display: flex;
-  gap: 0.52vw;
+  gap: 10px;
   width: 100%;
-  font-size: 0.94vw;
-  line-height: 1.15vw;
+  font-size: 18px;
+  line-height: 22px;
   color: #FFF;
 }
 
 .about-game {
   display: flex;
   width: 100%;
-  max-width: 7.76vw;
-  padding: 0.52vw 0.73vw;
+  max-width: 149px;
+  padding: 10px 14px;
   background-color: black;
-  border-radius: 0.78vw;
+  border-radius: 15px;
 }
 
 .about-game__text {
-  margin-left: 0.52vw;
+  margin-left: 10px;
 }
 
 .puzzle-game__heading {
   display: block;
   flex-shrink: 0;
   width: 100%;
-  height: 3.23vw;
-  margin-bottom: 1.56vw;
+  height: 62px;
+  margin-bottom: 30px;
 }
 
 .win-title {
   width: 100%;
-  font-size: 1.25vw;
+  font-size: 24px;
   line-height: 130.9%;
   color: #FFFFFF;
 }
@@ -267,9 +267,9 @@ body {
 
 .leaderboard-button {
   display: flex;
-  margin-top: 0.52vw;
-  font-size: 0.94vw;
-  line-height: 1.15vw;
+  margin-top: 10px;
+  font-size: 18px;
+  line-height: 22px;
   color: #FFFFFF;
   background-color: transparent;
   display: flex;
@@ -277,9 +277,9 @@ body {
 }
 .leaderboard-button::after {
   content: "";
-  width: 0.73vw;
-  height: 0.42vw;
-  margin-left: 0.52vw;
+  width: 14px;
+  height: 8px;
+  margin-left: 10px;
   background-image: url(../assets/img/arrow.svg);
   transform: rotate(0);
   display: block;
@@ -294,7 +294,7 @@ body {
 
 .leaderboards-list {
   width: 100%;
-  margin-top: 2.08vw;
+  margin-top: 40px;
   opacity: 0;
   visibility: hidden;
   transition: all ease 0.4s;
@@ -312,19 +312,159 @@ body {
 
 .leaderboards-score {
   display: flex;
-  gap: 0.52vw;
+  gap: 10px;
 }
 .leaderboards-score div {
-  width: 4.95vw;
+  width: 95px;
   text-align: left;
 }
 
+.leaderboards-item {
+  font-size: 18px;
+  line-height: 22px;
+}
 .leaderboards-item:not(:last-child) {
-  margin-bottom: 0.52vw;
+  margin-bottom: 10px;
 }
 
 .leaderboards-score-position {
   width: 100%;
-  max-width: 4.43vw;
+  max-width: 85px;
   text-align: center;
+}
+
+@media (max-width: 1078px) {
+  .container {
+    max-width: 50.56vw;
+    margin-top: 4.64vw;
+    padding-bottom: 13.91vw;
+  }
+  .puzzle-game__top {
+    margin-bottom: 0.93vw;
+  }
+  .game-settings {
+    max-width: 36.46vw;
+    padding: 1.86vw;
+    top: 13.36vw;
+    border-radius: 1.86vw;
+  }
+  .settings-heading {
+    font-size: 1.86vw;
+    line-height: 24px;
+  }
+  .settings-list {
+    margin-top: 0.56vw;
+    gap: 1.3vw;
+  }
+  .settings-list button {
+    font-size: 1.67vw;
+    line-height: 2.04vw;
+  }
+  .board {
+    padding: 1.95vw 2.04vw 2.04vw 1.95vw;
+    border-radius: 1.86vw;
+  }
+  .board-very-small {
+    max-width: 33.77vw;
+    height: 33.77vw;
+  }
+  .board-small {
+    max-width: 43.97vw;
+    height: 43.97vw;
+  }
+  .board-medium {
+    max-width: 54.17vw;
+    height: 54.17vw;
+  }
+  .board-standart {
+    max-width: 64.38vw;
+    height: 64.38vw;
+  }
+  .board-large {
+    max-width: 74.58vw;
+    height: 74.58vw;
+  }
+  .board-very-large {
+    max-width: 84.79vw;
+    height: 84.79vw;
+  }
+  .cell {
+    width: 9.28vw;
+    height: 9.28vw;
+    border-radius: 0.78vw;
+    font-size: 3.39vw;
+    line-height: 4.11vw;
+  }
+  .settings-button {
+    width: 3.92vw;
+    height: 3.92vw;
+  }
+  .volume-button {
+    width: 3.64vw;
+    height: 3.54vw;
+  }
+  .volume-button::after {
+    content: "";
+    height: 0.37vw;
+  }
+  .top-buttons-menu {
+    gap: 0.93vw;
+  }
+  .button {
+    margin-top: 2.8vw;
+    padding: 1.96vw 5.6vw 1.87vw 5.6vw;
+    font-size: 2.24vw;
+    line-height: 2.71vw;
+    border-radius: 1.87vw;
+  }
+  .top-buttons {
+    gap: 0.93vw;
+    font-size: 1.68vw;
+    line-height: 2.05vw;
+  }
+  .about-game {
+    max-width: 13.9vw;
+    padding: 0.93vw 1.31vw;
+    border-radius: 1.4vw;
+  }
+  .about-game__text {
+    margin-left: 0.93vw;
+  }
+  .puzzle-game__heading {
+    height: 5.78vw;
+    margin-bottom: 2.8vw;
+  }
+  .win-title {
+    font-size: 2.24vw;
+  }
+  .leaderboard-button {
+    margin-top: 0.93vw;
+    font-size: 1.68vw;
+    line-height: 2.05vw;
+  }
+  .leaderboard-button::after {
+    content: "";
+    width: 1.31vw;
+    height: 0.75vw;
+    margin-left: 0.93vw;
+  }
+  .leaderboards-list {
+    margin-top: 3.73vw;
+  }
+  .leaderboards-score {
+    gap: 0.93vw;
+  }
+  .leaderboards-score div {
+    width: 8.86vw;
+  }
+  .leaderboards-item {
+    font-size: 1.68vw;
+    line-height: 2.05vw;
+  }
+  .leaderboards-item:not(:last-child) {
+    margin-bottom: 0.93vw;
+  }
+  .leaderboards-score-position {
+    max-width: 7.93vw;
+  }
 }/*# sourceMappingURL=styles.css.map */
